// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`README 1`] = `
Object {
  "hashmap": Object {
    "1054487305": "este-texto-tambem-mas-sem-as-exclamacoes",
    "1105371475": "erro-de-entrada",
    "1350806831": "incluir-este-texto",
    "2161373089": "label_lowercase",
    "2994568279": "nome-do-usuario",
    "3102868937": "constantname",
    "3251541170": "error_lowercase",
    "3251814319": "meu-texto-internacionalizavel",
    "3375576029": "text_lowercase",
    "3796890060": "ignore-this-text",
    "885157645": "react_lowercase",
    "922874748": "my-ignored-classname_lowercase",
  },
  "ignored": Object {
    "constantname": "constantName",
    "error_lowercase": "error",
    "ignore-this-text": "Ignore this text",
    "label_lowercase": "label",
    "my-ignored-classname_lowercase": "my-ignored-classname",
    "react_lowercase": "react",
    "text_lowercase": "text",
  },
  "strings": Object {
    "erro-de-entrada": "Erro de entrada",
    "este-texto-tambem-mas-sem-as-exclamacoes": "Este texto também, mas sem as exclamações",
    "incluir-este-texto": "Incluir este texto",
    "meu-texto-internacionalizavel": "Meu texto internacionalizável",
    "nome-do-usuario": "Nome do usuário",
  },
}
`;

exports[`test 1 1`] = `
Object {
  "hashmap": Object {
    "2951570100": "este-texto-precisa-ser-extraido",
  },
  "ignored": Object {
    "este-texto-precisa-ser-extraido": "Este texto precisa ser extraído",
  },
  "strings": Object {},
}
`;

exports[`test com jsx 1`] = `
Object {
  "hashmap": Object {
    "1090290174": "ignorethisword",
    "1836160639": "http-www-ignorar-esta-url-com-br_lowercase",
    "2639710208": "mb-2-ignorethis_lowercase",
    "2951570100": "este-texto-precisa-ser-extraido",
    "4261676902": "este-e-um-label-e-precisa-ser-extraido",
    "4261757570": "nao-reembolsavel",
    "576345883": "3_lowercase",
    "885157645": "react_lowercase",
  },
  "ignored": Object {
    "3_lowercase": "3",
    "http-www-ignorar-esta-url-com-br_lowercase": "http://www.ignorar.esta.url.com.br",
    "ignorethisword": "IgnoreThisWord",
    "mb-2-ignorethis_lowercase": "mb-2 ignorethis",
    "react_lowercase": "react",
  },
  "strings": Object {
    "este-e-um-label-e-precisa-ser-extraido": "Este é um label e precisa ser extraído",
    "este-texto-precisa-ser-extraido": "Este texto precisa ser extraído",
    "nao-reembolsavel": "Não reembolsável",
  },
}
`;

exports[`test com jsx 2 1`] = `
Object {
  "hashmap": Object {
    "576345883": "3_lowercase",
    "74761743": "mb-2-ignorethis-second-time_lowercase",
    "885157645": "react_lowercase",
  },
  "ignored": Object {
    "3_lowercase": "3",
    "mb-2-ignorethis-second-time_lowercase": "mb-2 ignorethis second-time",
    "react_lowercase": "react",
  },
  "strings": Object {},
}
`;

exports[`teste ignorar jquery 1`] = `
Object {
  "hashmap": Object {
    "1313446134": "selectorjquery_lowercase",
    "2383043738": "jquery_lowercase",
  },
  "ignored": Object {
    "jquery_lowercase": "jquery",
    "selectorjquery_lowercase": "selectorjquery",
  },
  "strings": Object {},
}
`;

exports[`teste template 2 1`] = `
Object {
  "hashmap": Object {},
  "ignored": Object {},
  "strings": Object {},
}
`;

exports[`teste template com jsx 1`] = `
Object {
  "hashmap": Object {
    "3448505072": "ignorethis_lowercase",
  },
  "ignored": Object {
    "ignorethis_lowercase": "ignorethis",
  },
  "strings": Object {},
}
`;
